@@ -1,5 +1,7 @@
 Changes with version
 
+ *) Add support for Identity server default
+
  *) Update project boilerplate
 
 
